TRUNK-6420: Fix logging to report less errors, enabled performance tests for GHA
(cherry picked from commit b808731479678166d37e87f8932cb84ad96c121a)